k8s/traefik-strip-api-prefix-middleware.yaml
# k8s/traefik-strip-api-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix # Give the middleware a name
  namespace: default # Ensure it's in the same namespace as your Ingress
spec:
  stripPrefix:
    prefixes:
      - /api # Specify the prefix(es) to remove
