k8s/03-postgres-statefulset.yaml
# k8s/postgres-statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres # name of the stateful resource
spec:
  serviceName: 'postgres-svc' # refer to the pg headless service
  replicas: 1
  selector:
    matchLabels:
      app: postgres # Pods created must match this label
  template: # the pod template
    metadata:
      labels:
        app: postgres # apple the label for the service selector

    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: postgres:17.4-bookworm
          ports:
            - containerPort: 5432
              name: postgresdb
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data # standard pg data dic
  volumeClaimTemplates:
    - metadata:
        name: postgres-data # Name of the volume claim, matches volumnMounts.name
      spec:
        accessModes: ['ReadWriteOnce'] # Can be mounted by one node at a time
        resources:
          requests:
            storage: 5Gi
