k8s/11-api-deployment.yaml
# k8s/api-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: clarte-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clarte-api
  template:
    metadata:
      labels:
        app: clarte-api
    spec:
      containers:
        - name: api
          image: ghcr.io/amirzhou/clarte-api:latest
          ports:
            - containerPort: 9999
