k8s/12-api-service.yaml
# k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clarte-api-svc # this one, stable dns name for them pods
spec:
  ports:
    - name: web
      protocol: TCP
      port: 80 # The service listen on
      targetPort: 9999 # the container listen on LISTENING_PORT
  selector:
    app: clarte-api
  type: ClusterIP #  Only reachable inside the cluster (default)
