k8s/clarte-ingressroute-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: clarte-ingressroute-https
  namespace: default
spec:
  entryPoints:
    - websecure

  routes:
    - kind: Rule
      match: Host(`clarte.local`)
      services:
        - name: clarte-web-svc
          port: web
          scheme: http

  tls:
    secretName: clarte-tls-secret
